parfectly working hissa output and remove previous output

--- a/index.html
+++ b/index.html
@@ -130,17 +130,18 @@
     <form >
       <h2>হিস্যার হিসাব</h2>
         <label>মোট সম্পত্তির পরিমান ( শতাংশে ) </label>
-        <input type="number" id="motJomi" value=0 required> 
+        <input type="number" id="motJomi"  required> 
 
         <label>পুত্রের সংখ্যাঃ  </label>
-        <input type="number" id="motPutro" value=0 required>
+        <input type="number" id="motPutro" value=0 >
 
         <label>কন্যার সংখ্যাঃ </label>
-        <input type="number" id="motKonna" value=0 required>
+        <input type="number" id="motKonna" value=0 >
         <label>স্ত্রীর সংখ্যাঃ </label>
-        <input type="number" id="motWife" value=0 required>
+        <input type="number" id="motWife" value=0 >
         <button id="" type="button" onclick="calHissa()">জমা দিন</button> 
     </form>
+    <div id="hissaOutput"></div>
   </div>
 
   <br>
